Fixed a bug casing a horizontal scroll bar on phones with slim screens.

--- a/css/index.css
+++ b/css/index.css
@@ -710,6 +710,12 @@ header .banner .button:hover {
     font-size: 1.8rem;
   }
 }
+@media (max-width: 500px) {
+  .about div img {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
 .about div {
   width: 40%;
 }
