--- a/less/home-page.less
+++ b/less/home-page.less
@@ -294,6 +294,12 @@ header {
                 font-size: 1.8rem;
             }
         }
+        img {
+            @media @mobile {
+                width: 90%;
+                margin: 0 auto;
+            }
+        }
     }
     div {
         width: 40%;
